Updated workflows to use Java 25. Updated API documentation to comply with OpenAPI 3.1.1
