# src/integration-test/resources/openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: api-businessengagements
   contact: { }
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "3.0"
 servers:
-  - url: http://localhost:58247
+  - url: http://localhost:51784
     description: Generated server url
 tags:
   - name: Business Engagements
@@ -34,8 +34,6 @@ paths:
           required: true
           schema:
             type: string
-            description: Unique identifier for an organization number
-            example: fb2f0290-3820-11ed-a261-0242ac120002
           example: fb2f0290-3820-11ed-a261-0242ac120002
         - name: organizationName
           in: query
@@ -43,7 +41,7 @@ paths:
           required: false
           schema:
             type: string
-            description: Name of the organization
+          example: Lelles Kebaberia
       responses:
         "200":
           description: Successful Operation
@@ -98,26 +96,21 @@ paths:
           required: true
           schema:
             type: string
-            description: Unique identifier for a person
-            example: 6a5c3d04-412d-11ec-973a-0242ac130003
           example: 6a5c3d04-412d-11ec-973a-0242ac130003
         - name: personalName
           in: query
           description: The first and surname of the person
           required: true
           schema:
-            minLength: 1
             type: string
-            description: The first and surname of the person
+            minLength: 1
         - name: serviceName
           in: query
           description: Name of the system initiating the request
           required: true
           schema:
-            minLength: 1
             type: string
-            description: Name of the system initiating the request
-            example: Mina Sidor
+            minLength: 1
           example: Mina Sidor
       responses:
         "200":
@@ -181,22 +174,21 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
+        status:
+          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
     StatusType:
       type: object
       properties:
-        reasonPhrase:
-          type: string
         statusCode:
           type: integer
           format: int32
+        reasonPhrase:
+          type: string
     ConstraintViolationProblem:
       type: object
       properties:
@@ -242,8 +234,7 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
         detail:
           type: string
         suppressed:
@@ -282,8 +273,7 @@ components:
     ThrowableProblem:
       type: object
       properties:
-        cause:
-          $ref: "#/components/schemas/ThrowableProblem"
+        cause: { }
         stackTrace:
           type: array
           items:
@@ -316,14 +306,13 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
+        status:
+          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
         suppressed:
           type: array
           items:
@@ -366,31 +355,37 @@ components:
           type: string
     Address:
       type: object
+      description: Address model
       properties:
         city:
           type: string
           description: City
-          example: Sundsvall
+          examples:
+            - Sundsvall
         street:
           type: string
           description: Street address
-          example: Storgatan 10
+          examples:
+            - Storgatan 10
         postcode:
           type: string
           description: Postal code
-          example: "85740"
+          examples:
+            - "85740"
         careOf:
           type: string
           description: Care of
-          example: John Doe
-      description: Address model
+          examples:
+            - John Doe
     BusinessInformation:
       type: object
+      description: Business information model
       properties:
         companyName:
           type: string
           description: The company's name
-          example: Sundsvalls kommun
+          examples:
+            - Sundsvalls kommun
         legalForm:
           $ref: "#/components/schemas/LegalForm"
         address:
@@ -398,11 +393,13 @@ components:
         emailAddress:
           type: string
           description: The company's contact email
-          example: somecompany@noreply.com
+          examples:
+            - somecompany@noreply.com
         phoneNumber:
           type: string
           description: The company's contact phone number
-          example: 070-1740605
+          examples:
+            - 070-1740605
         municipality:
           $ref: "#/components/schemas/Municipality"
         county:
@@ -413,112 +410,127 @@ components:
           $ref: "#/components/schemas/CompanyForm"
         companyRegistrationTime:
           type: string
-          description: When the company was registered
           format: date
-          example: 2022-01-01
+          description: When the company was registered
+          examples:
+            - 2022-01-01
         liquidationInformation:
           $ref: "#/components/schemas/LiquidationInformation"
+          description: Liquidation information
         deregistrationDate:
           type: string
-          description: When and if the company was deregistered
           format: date
-          example: 2022-09-01
+          description: When and if the company was deregistered
+          examples:
+            - 2022-09-01
         companyLocation:
           $ref: "#/components/schemas/Address"
+          description: Company location
         businessSignatory:
           type: string
           description: Who may sign for the company
-          example: Firman tecknas av styrelsen
+          examples:
+            - Firman tecknas av styrelsen
         companyDescription:
           type: string
           description: Information regarding the company's operations
-          example: Psykologisk forskning på bin samt därmed förenlig verksamhet.
+          examples:
+            - Psykologisk forskning på bin samt därmed förenlig verksamhet.
         sharesInformation:
           $ref: "#/components/schemas/SharesInformation"
         errorInformation:
           $ref: "#/components/schemas/ErrorInformation"
-      description: Business information model
     CompanyForm:
       type: object
+      description: Company form information model
       properties:
         companyFormCode:
           type: string
           description: Company form
-          example: AB
+          examples:
+            - AB
         companyFormDescription:
           type: string
           description: Company form description
-          example: Aktiebolag
-      description: Company form information model
+          examples:
+            - Aktiebolag
     County:
       type: object
+      description: County information model
       properties:
         countyName:
           type: string
           description: County
-          example: Västernorrland
+          examples:
+            - Västernorrland
         countyCode:
           type: string
           description: County code
-          example: "22"
-      description: County information model
+          examples:
+            - "22"
     ErrorInformation:
       type: object
+      description: Error information model
       properties:
         hasErrors:
           type: boolean
           description: Indicates if there was an error while fetching data and that
             one or more parameters could not be fetched
-          example: true
+          examples:
+            - "true"
         errorDescriptions:
           type: object
           additionalProperties:
             type: string
-            description: Map with error code (from bolagsverket) as key and the error
-              description as value
-            example: "9071006, Ej behörig - ej firmatecknare."
           description: Map with error code (from bolagsverket) as key and the error
             description as value
-          example: "9071006, Ej behörig - ej firmatecknare."
-      description: Error information model
+          examples:
+            - "9071006, Ej behörig - ej firmatecknare."
     FiscalYear:
       type: object
+      description: Fiscal year information model
       properties:
         fromDay:
           type: integer
-          description: Fiscal year start day
           format: int32
-          example: 1
+          description: Fiscal year start day
+          examples:
+            - "1"
         fromMonth:
           type: integer
-          description: Fiscal year start month
           format: int32
-          example: 1
+          description: Fiscal year start month
+          examples:
+            - "1"
         toDay:
           type: integer
-          description: Fiscal year end day
           format: int32
-          example: 31
+          description: Fiscal year end day
+          examples:
+            - "31"
         toMonth:
           type: integer
-          description: Fiscal year end month
           format: int32
-          example: 12
-      description: Fiscal year information model
+          description: Fiscal year end month
+          examples:
+            - "12"
     LegalForm:
       type: object
+      description: Legal form information model
       properties:
         legalFormDescription:
           type: string
           description: Legal form
-          example: Övriga aktiebolag
+          examples:
+            - Övriga aktiebolag
         legalFormCode:
           type: string
           description: Legal form code
-          example: "49"
-      description: Legal form information model
+          examples:
+            - "49"
     LiquidationInformation:
       type: object
+      description: Liquidation information model
       properties:
         liquidationReasons:
           type: array
@@ -526,58 +538,67 @@ components:
             $ref: "#/components/schemas/LiquidationReason"
         cancelledLiquidation:
           $ref: "#/components/schemas/LiquidationReason"
-      description: Liquidation information model
     LiquidationReason:
       type: object
+      description: Reason for liquidation or cancellation of liquidation
       properties:
         liquidationCode:
           type: string
           description: Liquidation code
-          example: "21"
+          examples:
+            - "21"
         liquidationDescription:
           type: string
           description: Liquidation description
-          example: Konkurs avslutad
+          examples:
+            - Konkurs avslutad
         liquidationDate:
           type: string
-          description: Liquidation date
           format: date
-          example: 2022-09-01
+          description: Liquidation date
+          examples:
+            - 2022-09-01
         liquidationType:
           type: string
           description: Type of liquidation
-          example: Konkurs
-      description: Reason for liquidation or cancellation of liquidation
+          examples:
+            - Konkurs
     Municipality:
       type: object
+      description: Municipality information model
       properties:
         municipalityName:
           type: string
           description: Municipality
-          example: Sundsvalls Kommun
+          examples:
+            - Sundsvalls Kommun
         municipalityCode:
           type: string
           description: Municipality code
-          example: "2281"
-      description: Municipality information model
+          examples:
+            - "2281"
     ShareType:
       type: object
+      description: Share information model
       properties:
         label:
           type: string
           description: Label of the shares
-          example: B
+          examples:
+            - B
         numberOfShares:
           type: integer
           description: Number of shares of this class
-          example: 25000
+          examples:
+            - "25000"
         voteValue:
           type: string
           description: The vote value for one share
-          example: 1/10
-      description: Share information model
+          examples:
+            - 1/10
     SharesInformation:
       type: object
+      description: Shares information model
       properties:
         shareTypes:
           type: array
@@ -586,20 +607,21 @@ components:
         numberOfShares:
           type: integer
           description: Number of total shares
-          example: 100000
+          examples:
+            - "100000"
         shareCapital:
           type: number
           description: Shares value
-          example: 120000.0
+          examples:
+            - "120000.00"
         shareCurrency:
           type: string
           description: Shares value currency
-          example: sek
-      description: Shares information model
+          examples:
+            - sek
     BusinessEngagementsResponse:
-      required:
-        - status
       type: object
+      description: Business engagements response model
       properties:
         engagements:
           type: array
@@ -609,38 +631,40 @@ components:
           type: object
           additionalProperties:
             type: string
-            description: "In case fetching one or more engagement failed, this will\
-              \ show why it failed. There may be more than one description if several\
-              \ engagements failed."
-            example: Timeout
           description: "In case fetching one or more engagement failed, this will\
             \ show why it failed. There may be more than one description if several\
             \ engagements failed."
-          example: Timeout
+          examples:
+            - Timeout
         status:
           type: string
           description: If fetching all engagements went "OK" or "NOK". A "NOK" may
             still return engagements but indicates that the information is incomplete.
-          example: OK
           enum:
             - OK
             - NOK
-      description: Business engagements response model
+          examples:
+            - OK
+      required:
+        - status
     Engagement:
       type: object
+      description: Represents a persons business engagement.
       properties:
         organizationName:
           type: string
           description: Name of the organization
-          example: Styrbjörns båtar
+          examples:
+            - Styrbjörns båtar
         organizationNumber:
           type: string
           description: "Organization number, may also be personal number in case of\
             \ enskild firma"
-          example: "2021005448"
+          examples:
+            - "2021005448"
         organizationId:
           type: string
           description: Unique id for the organization (UUID)
-          example: bab17d8b-af38-4531-967c-083f15ca1571
-      description: Represents a persons business engagement.
+          examples:
+            - bab17d8b-af38-4531-967c-083f15ca1571
   securitySchemes: { }
