# src/main/java/se/sundsvall/businessengagements/api/model/Address.java
@@ -13,16 +13,16 @@ import lombok.NoArgsConstructor;
 @Schema(description = "Address model")
 public class Address {
 
-	@Schema(description = "City", example = "Sundsvall")
+	@Schema(description = "City", examples = "Sundsvall")
 	private String city;
 
-	@Schema(description = "Street address", example = "Storgatan 10")
+	@Schema(description = "Street address", examples = "Storgatan 10")
 	private String street;
 
-	@Schema(description = "Postal code", example = "85740")
+	@Schema(description = "Postal code", examples = "85740")
 	private String postcode;
 
-	@Schema(description = "Care of", example = "John Doe")
+	@Schema(description = "Care of", examples = "John Doe")
 	private String careOf;
 
 }
